Actualitzar a la darrera versio de bootstrap

--- a/index.es.html
+++ b/index.es.html
@@ -9,7 +9,7 @@
 
 		<title>Información sobre el impacto de covid-19</title>
 
-		<link rel="canonical" href="https://getbootstrap.com/docs/4.0/examples/album/">
+		<link rel="canonical" href="https://getbootstrap.com/docs/4.5/examples/album/">
 
 		<!-- Bootstrap core CSS -->
 		<link href="template/css/bootstrap.min.css" rel="stylesheet">
@@ -55,7 +55,7 @@
 					</div>
 				</div>
 			</div>
-			<div class="navbar navbar-dark bg-dark box-shadow">
+			<div class="navbar navbar-dark bg-dark shadow-sm">
 				<div class="container d-flex justify-content-between">
 					<a href="#" class="navbar-brand d-flex align-items-center">
 						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="mr-2" viewBox="0 0 24 24" focusable="false"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/><circle cx="12" cy="13" r="4"/></svg>
@@ -83,7 +83,7 @@
 					<div class="row">
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot01es1.png" data-toggle2="lightbox" data-gallery2="plot01">
 									<img class="card-img-top" src="output/plot01es1.png">
 								</a>
@@ -105,7 +105,7 @@
 						<div data-toggle="lightbox" data-gallery="plot01" data-remote="output/plot01es2.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot02es1.png" data-toggle2="lightbox" data-gallery2="plot02">
 									<img class="card-img-top" src="output/plot02es1.png">
 								</a>
@@ -129,7 +129,7 @@
 						<div data-toggle="lightbox" data-gallery="plot02" data-remote="output/plot02es3.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot03es1.png" data-toggle2="lightbox" data-gallery2="plot03">
 									<img class="card-img-top" src="output/plot03es1.png">
 								</a>
@@ -159,7 +159,7 @@
 						<div data-toggle="lightbox" data-gallery="plot03" data-remote="output/plot03es6.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot04es1.png" data-toggle2="lightbox" data-gallery2="plot04">
 									<img class="card-img-top" src="output/plot04es1.png">
 								</a>
@@ -183,7 +183,7 @@
 						<div data-toggle="lightbox" data-gallery="plot04" data-remote="output/plot04es3.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot05es1.png" data-toggle2="lightbox" data-gallery2="plot05">
 									<img class="card-img-top" src="output/plot05es1.png">
 								</a>
@@ -207,7 +207,7 @@
 						<div data-toggle="lightbox" data-gallery="plot05" data-remote="output/plot05es3.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot06es.png" data-toggle2="lightbox" data-gallery2="plot06">
 									<img class="card-img-top" src="output/plot06es.png">
 								</a>
@@ -227,7 +227,7 @@
 						<div data-toggle="lightbox" data-gallery="plot06" data-remote="output/plot06es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot07es1.png" data-toggle2="lightbox" data-gallery2="plot07">
 									<img class="card-img-top" src="output/plot07es1.png">
 								</a>
@@ -249,7 +249,7 @@
 						<div data-toggle="lightbox" data-gallery="plot07" data-remote="output/plot07es2.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot08es1.png" data-toggle2="lightbox" data-gallery2="plot08">
 									<img class="card-img-top" src="output/plot08es1.png">
 								</a>
@@ -275,7 +275,7 @@
 						<div data-toggle="lightbox" data-gallery="plot08" data-remote="output/plot08es4.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot09es01.gif" data-toggle2="lightbox" data-gallery2="plot09">
 									<img class="card-img-top" src="output/plot09es01.gif">
 								</a>
@@ -345,7 +345,7 @@
 						<div data-toggle="lightbox" data-gallery="plot09" data-remote="output/plot09es26.gif"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot10es.png" data-toggle2="lightbox" data-gallery2="plot10">
 									<img class="card-img-top" src="output/plot10es.png">
 								</a>
@@ -365,7 +365,7 @@
 						<div data-toggle="lightbox" data-gallery="plot10" data-remote="output/plot10es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot11es.png" data-toggle2="lightbox" data-gallery2="plot11">
 									<img class="card-img-top" src="output/plot11es.png">
 								</a>
@@ -385,7 +385,7 @@
 						<div data-toggle="lightbox" data-gallery="plot11" data-remote="output/plot11es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot12es.png" data-toggle2="lightbox" data-gallery2="plot12">
 									<img class="card-img-top" src="output/plot12es.png">
 								</a>
@@ -405,7 +405,7 @@
 						<div data-toggle="lightbox" data-gallery="plot12" data-remote="output/plot12es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot13es.png" data-toggle2="lightbox" data-gallery2="plot13">
 									<img class="card-img-top" src="output/plot13es.png">
 								</a>
@@ -425,7 +425,7 @@
 						<div data-toggle="lightbox" data-gallery="plot13" data-remote="output/plot13es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot14es.png" data-toggle2="lightbox" data-gallery2="plot14">
 									<img class="card-img-top" src="output/plot14es.png">
 								</a>
@@ -445,7 +445,7 @@
 						<div data-toggle="lightbox" data-gallery="plot14" data-remote="output/plot14es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot15es.gif" data-toggle2="lightbox" data-gallery2="plot15">
 									<img class="card-img-top" src="output/plot15es.gif">
 								</a>
@@ -465,7 +465,7 @@
 						<div data-toggle="lightbox" data-gallery="plot15" data-remote="output/plot15es.gif"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot16es.png" data-toggle2="lightbox" data-gallery2="plot16">
 									<img class="card-img-top" src="output/plot16es.png">
 								</a>
@@ -485,7 +485,7 @@
 						<div data-toggle="lightbox" data-gallery="plot16" data-remote="output/plot16es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot17es.png" data-toggle2="lightbox" data-gallery2="plot17">
 									<img class="card-img-top" src="output/plot17es.png">
 								</a>
@@ -505,7 +505,7 @@
 						<div data-toggle="lightbox" data-gallery="plot17" data-remote="output/plot17es.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot18es01.png" data-toggle2="lightbox" data-gallery2="plot18">
 									<img class="card-img-top" src="output/plot18es01.png">
 								</a>
@@ -597,7 +597,7 @@
 						<div data-toggle="lightbox" data-gallery="plot18" data-remote="output/plot18es37.png"></div>
 
 						<div class="col-md-4">
-							<div class="card mb-4 box-shadow">
+							<div class="card mb-4 shadow-sm">
 								<a href="output/plot19es.png" data-toggle2="lightbox" data-gallery2="plot19">
 									<img class="card-img-top" src="output/plot19es.png">
 								</a>
@@ -634,7 +634,7 @@
 		<!-- Bootstrap core JavaScript
 		================================================== -->
 		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="template/js/jquery-3.2.1.slim.min.js"></script>
+		<script src="template/js/jquery-3.5.1.slim.min.js"></script>
 		<script src="template/js/popper.min.js"></script>
 		<script src="template/js/bootstrap.min.js"></script>
 		<script src="template/js/ekko-lightbox.min.js"></script>
