Afegir la paraula oficial quan es parla de fonts de dades

--- a/index.ca.html
+++ b/index.ca.html
@@ -72,7 +72,7 @@
 			<section class="jumbotron text-center">
 				<div class="container">
 					<p class="lead text-muted text-left">Gràfics de defuncions per any, origen de les dades, acumulats diaris, setmanals, mensuals, anuals, per edat, per comunitat autònoma, per provincia, per pais i més</p>
-					<p class="lead text-muted text-left">Totes les dades s'han obtingut de fonts com MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, o els equivalents al institut nacional d'estadística de Suecia, Noruega, Portugal, França i Alemanya</p>
+					<p class="lead text-muted text-left">Totes les dades s'han obtingut de fonts oficials com MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, o els equivalents al institut nacional d'estadística de Suecia, Noruega, Portugal, França i Alemanya</p>
 				</div>
 			</section>
 
