--- a/index.en.html
+++ b/index.en.html
@@ -72,7 +72,7 @@
 			<section class="jumbotron text-center">
 				<div class="container">
 					<p class="lead text-muted text-left">Graphs of deaths by year, origin of the data, daily accumulated, weekly, montly, yearly, by age, by autonomous community, by province, by country and more</p>
-					<p class="lead text-muted text-left">All data have been obtained from sources as MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, or the equivalents to the National Statistics Institute of Sweden, Norway, Portugal, France and Germany</p>
+					<p class="lead text-muted text-left">All data have been obtained from official sources as MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, or the equivalents to the National Statistics Institute of Sweden, Norway, Portugal, France and Germany</p>
 				</div>
 			</section>
 
