--- a/index.es.html
+++ b/index.es.html
@@ -72,7 +72,7 @@
 			<section class="jumbotron text-center">
 				<div class="container">
 					<p class="lead text-muted text-left">Gráficos de defunciones por año, origen de los datos, acumulados diarios, semanales, mensuales, anuales, por edad, por comunidad autónoma, por provincia, por pais y más</p>
-					<p class="lead text-muted text-left">Todos los datos se han obtenido de fuentes como MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, o los equivalentes al instituto nacional de estadística de Suecia, Noruega, Portugal, Francia y Alemania</p>
+					<p class="lead text-muted text-left">Todos los datos se han obtenido de fuentes oficiales como MoMo, INE, CSIC, OECD, EuroMoMo, Eurostat, o los equivalentes al instituto nacional de estadística de Suecia, Noruega, Portugal, Francia y Alemania</p>
 				</div>
 			</section>
 
